--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ListaInformacoes"></activity>
+        <activity android:name=".ListaDeCapturas"></activity>
         <activity android:name=".Aula11Activity" />
         <activity
             android:name=".TrabalhoActivity"
